<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/welcomeMessage"
        android:textColor="#0e0e0e"
        android:textSize="14sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Enter Sale Amount"
            android:textSize="12sp" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:ems="8"
            android:inputType="numberDecimal"
            android:textSize="12sp">

            <requestFocus />

        </EditText>


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:height="20dp"
            android:onClick="inputAmount"
            android:text="@string/submit"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView5">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView5"
            android:paddingBottom="20dp"
            android:text="Enter Zip"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_toEndOf="@+id/textView4"
            android:layout_toLeftOf="@+id/zipButton"
            android:ems="6"
            android:inputType="number"
            android:textSize="12sp">

        </EditText>


        <Button
            android:id="@+id/zipButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_toLeftOf="@+id/findMe"
            android:height="20dp"
            android:onClick="inputZip"
            android:text="@string/submit"
            android:textSize="10sp" />


        <Button
            android:id="@+id/findMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:onClick="geoLocate"
            android:text="@string/current_location"
            android:textSize="10sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2">

        <TextView
            android:id="@+id/selectItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:paddingRight="25dp"
            android:text="@string/selectItem"
            android:textSize="12sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/selectItem"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:entries="@array/itemList"
            android:prompt="@string/promptText"
            android:textSize="12sp" />


    </LinearLayout>

    <Button
        android:id="@+id/calcGoButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/linearLayout3"
        android:layout_gravity="center_horizontal"
        android:onClick="calcGo"
        android:text="@string/calcGoText"
        android:textSize="12sp" />


    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/calcGoButton"
        android:gravity="center_horizontal"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/yourAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:text="Amount Entered"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/amountDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/yourAmount"
            android:layout_toEndOf="@+id/yourAmount"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout4"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/yourZip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/taxDisplayZip"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:text="Your Zip Code"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/zipDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/yourZip"
            android:layout_toEndOf="@+id/yourZip"
            android:textSize="12sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout5a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/itemTypeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/taxDisplayZip"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:text="The type of item is"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/itemDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/itemTypeDisplay"
            android:layout_toEndOf="@+id/itemTypeDisplay"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout5a"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/taxRateZip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingRight="20dp"
            android:text="@string/taxDisplay"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/taxDisplayZip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/taxRateZip"
            android:layout_toEndOf="@+id/taxRateZip"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout6"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/taxRateItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingRight="20dp"
            android:text="@string/taxDisplayItem"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/taxRateTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/taxRateItem"
            android:layout_toEndOf="@+id/taxRateItem"
            android:paddingRight="20dp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout7"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/totalStateDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:paddingRight="20dp"
            android:text="@string/totalStateText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/totalStateAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/totalStateDisplay"
            android:layout_toEndOf="@+id/totalStateDisplay"
            android:paddingRight="20dp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout8"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/totalItemDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:paddingRight="20dp"
            android:text="@string/totalItemText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/totalItemAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/totalItemDisplay"
            android:layout_toEndOf="@+id/totalItemDisplay"
            android:paddingRight="20dp"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout9"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/totalAmountDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:paddingRight="20dp"
            android:text="@string/totalAmountText"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/totalAmountDisplay"
            android:layout_toEndOf="@+id/totalAmountDisplay"
            android:paddingRight="20dp"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>
